[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/plane_2/plane_2_blue.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=3]

[node name="Player" type="Area2D"]
collision_layer = 5
collision_mask = 12
script = ExtResource( 2 )
bullet_scene = ExtResource( 3 )
bullet_spawn_point = Vector2( 35, 10 )

[node name="Plane" type="Sprite" parent="."]
position = Vector2( 0, -5 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 75, 11, 23, -20, -38, -20, -58, -45, -69, -45, -66, 15, 35, 23 )

[node name="InvicibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="InvicibilityTimer" to="." method="_on_InvicibilityTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
